# proofly

./: .gitignore  FREELANCER_SECTION_README.md  FREELANCER_SYSTEM_README.md  README.md  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js
Contrato/: ContractInteraction.js  passo_passo  versel.json
Contrato/contracts/: Cargo.toml
Contrato/contracts/badgecontract/: Cargo.toml
Contrato/contracts/badgecontract/src/: badgecontract.rs
Contrato/contracts/badgenft/: Cargo.toml
Contrato/contracts/badgenft/src/: badge_nft.rs
Contrato/contracts/event_contract/: Cargo.toml
Contrato/contracts/event_contract/src/: event_contract.rs
Contrato/contracts/old/badgecontract/src/: badgecontract.rs  factory.rs
Contrato/contracts/old/organizationcontract/: Cargo.toml
Contrato/contracts/old/organizationcontract/src/: organizationcontract.rs
Contrato/contracts/old/proflycontract/src/: proflycontract.rs
Contrato/contracts/organization_contract/: Cargo.toml
Contrato/contracts/organization_contract/src/: organization_contract.rs
Contrato/contracts/organizationcontract/: Cargo.toml
Contrato/contracts/proflycontract/: Cargo.toml
Contrato/contracts/proflycontract/src/: proflycontract.rs
Contrato/contracts/src/: badgecontract.rs  lib.rs  ntf.rs  organizationcontract.rs  proflycontract.rs
app/: layout.tsx  page.tsx
blockchain-comunication/: execute-blockchain.ts
mocks/: freelanceData.ts  freelancersMarketplace.ts  hireMocks.ts
pages/: Company.tsx  Developer.tsx  Home.tsx  ParticlesBackground.tsx
types/: events.ts  forum.ts  (+2 more)
(+68 files in other folders)
