[workspace]
resolver = "2"
members = [
  "event_contract",
  "organization_contract"

]

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT"
name = "ProjetoHacka"

[workspace.dependencies]
soroban-sdk = "21.7.7"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

# For more information about this profile see https://soroban.stellar.org/docs/basic-tutorials/logging#cargotoml-profile
[profile.release-with-logs]
inherits = "release"
debug-assertions = true